fix: status bar overlap
