# _sdk/models/CommunityGoals.ts
@@ -1,0 +1,105 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * ChaChing Social Social API
+ * FatFIRESocial is a social network for people who are interested in financial independence and early retirement. It is a place to share your journey, ask questions, and connect with others who are on the same path. Whether you are just starting out or have already achieved financial independence, FatFIRESocial is a community where you can find support, inspiration, and advice. Join us today and start building the life you want! ```
+ *
+ * The version of the OpenAPI document: 1.0.0
+ * Contact: mabel.oza@chachingsocial.io
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { mapValues } from '../runtime';
+/**
+ * The goals of the community.
+ * @export
+ * @interface CommunityGoals
+ */
+export interface CommunityGoals {
+    /**
+     * The deadline for the goal.
+     * @type {Date}
+     * @memberof CommunityGoals
+     */
+    deadline?: Date;
+    /**
+     * The title of the goal.
+     * @type {string}
+     * @memberof CommunityGoals
+     */
+    title?: string;
+    /**
+     * The group of the goal.
+     * @type {string}
+     * @memberof CommunityGoals
+     */
+    group?: string;
+    /**
+     * The impact of the goal.
+     * @type {string}
+     * @memberof CommunityGoals
+     */
+    impact?: string;
+    /**
+     * The key performance indicators of the goal.
+     * @type {string}
+     * @memberof CommunityGoals
+     */
+    kpis?: string;
+    /**
+     * The source of the goal.
+     * @type {string}
+     * @memberof CommunityGoals
+     */
+    source?: string;
+}
+
+/**
+ * Check if a given object implements the CommunityGoals interface.
+ */
+export function instanceOfCommunityGoals(value: object): value is CommunityGoals {
+    return true;
+}
+
+export function CommunityGoalsFromJSON(json: any): CommunityGoals {
+    return CommunityGoalsFromJSONTyped(json, false);
+}
+
+export function CommunityGoalsFromJSONTyped(json: any, ignoreDiscriminator: boolean): CommunityGoals {
+    if (json == null) {
+        return json;
+    }
+    return {
+        
+        'deadline': json['deadline'] == null ? undefined : (new Date(json['deadline'])),
+        'title': json['title'] == null ? undefined : json['title'],
+        'group': json['group'] == null ? undefined : json['group'],
+        'impact': json['impact'] == null ? undefined : json['impact'],
+        'kpis': json['kpis'] == null ? undefined : json['kpis'],
+        'source': json['source'] == null ? undefined : json['source'],
+    };
+}
+
+export function CommunityGoalsToJSON(json: any): CommunityGoals {
+    return CommunityGoalsToJSONTyped(json, false);
+}
+
+export function CommunityGoalsToJSONTyped(value?: CommunityGoals | null, ignoreDiscriminator: boolean = false): any {
+    if (value == null) {
+        return value;
+    }
+
+    return {
+        
+        'deadline': value['deadline'] == null ? undefined : ((value['deadline']).toISOString()),
+        'title': value['title'],
+        'group': value['group'],
+        'impact': value['impact'],
+        'kpis': value['kpis'],
+        'source': value['source'],
+    };
+}
+
